--- a/notebooks/produce_stats.ipynb
+++ b/notebooks/produce_stats.ipynb
@@ -24,20 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
     "dtype_dict = {\n",
-    "    'white_supply_any_avg_tract': np.float32,\n",
-    "    'black_supply_any_avg_tract': np.float32,\n",
-    "    'am_indian_alaska_native_supply_any_avg_tract': np.float32,\n",
-    "    'asian_supply_any_avg_tract': np.float32,\n",
-    "    'native_hawaiian_pacific_islander_supply_any_avg_tract': np.float32,\n",
-    "    'other_race_supply_any_avg_tract': np.float32,\n",
-    "    'two_or_more_races_supply_any_avg_tract': np.float32,\n",
-    "    'hispanic_latino_supply_any_avg_tract': np.float32,\n",
+    "    'white_adj_supply_any_avg_tract': np.float32,\n",
+    "    'white_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'white_totcost_any_avg_tract': np.float32,\n",
+    "    'black_adj_supply_any_avg_tract': np.float32,\n",
+    "    'black_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'black_totcost_any_avg_tract': np.float32,\n",
+    "    'am_indian_alaska_native_adj_supply_any_avg_tract': np.float32,\n",
+    "    'am_indian_alaska_native_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'am_indian_alaska_native_totcost_any_avg_tract': np.float32,\n",
+    "    'asian_supply_adj_supply_any_tract': np.float32,\n",
+    "    'asian_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'asian_totcost_any_avg_tract': np.float32,\n",
+    "    'native_hawaiian_pacific_islander_adj_supply_any_avg_tract': np.float32,\n",
+    "    'native_hawaiian_pacific_islander_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'native_hawaiian_pacific_islander_totcost_any_avg_tract': np.float32,\n",
+    "    'other_race_adj_supply_any_avg_tract': np.float32,\n",
+    "    'other_race_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'other_race_totcost_any_avg_tract': np.float32,\n",
+    "    'two_or_more_races_adj_supply_any_avg_tract': np.float32,\n",
+    "    'two_or_more_races_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'two_or_more_races_totcost_any_avg_tract': np.float32,\n",
+    "    'hispanic_latino_adj_supply_any_avg_tract': np.float32,\n",
+    "    'hispanic_latino_adj_supply_hr_avg_tract': np.float32,\n",
+    "    'hispanic_latino_totcost_any_avg_tract': np.float32,\n",
     "    'state': np.int32,\n",
     "    'county': np.int32,\n",
     "    'tract': np.int32,\n",
@@ -67,14 +83,30 @@
     "\n",
     "# Rename the variables\n",
     "data.rename(columns={\n",
-    "    'white_supply_any_avg_tract': 'White',\n",
-    "    'black_supply_any_avg_tract': 'Black',\n",
-    "    'am_indian_alaska_native_supply_any_avg_tract': 'American Indian Alaska Native',\n",
-    "    'asian_supply_any_avg_tract': 'Asian',\n",
-    "    'native_hawaiian_pacific_islander_supply_any_avg_tract': 'Native Hawaiian Pacific Islander',\n",
-    "    'other_race_supply_any_avg_tract': 'Other Race',\n",
-    "    'two_or_more_races_supply_any_avg_tract': 'Two or More Races',\n",
-    "    'hispanic_latino_supply_any_avg_tract': 'Hispanic Latino',\n",
+    "    'white_adj_supply_any_avg_tract': 'White any',\n",
+    "    'white_adj_supply_hr_avg_tract': 'White high rated',\n",
+    "    'white_totcost_any_avg_tract': 'White total cost',\n",
+    "    'black_adj_supply_any_avg_tract': 'Black any',\n",
+    "    'black_adj_supply_hr_avg_tract': 'Black high rated',\n",
+    "    'black_totcost_any_avg_tract': 'Black total cost',\n",
+    "    'am_indian_alaska_native_adj_supply_any_avg_tract': 'American Indian Alaska Native any',\n",
+    "    'am_indian_alaska_native_adj_supply_hr_avg_tract': 'American Indian Alaska Native high rated',\n",
+    "    'am_indian_alaska_native_totcost_any_avg_tract': 'American Indian Alaska Native total cost',\n",
+    "    'asian_adj_supply_any_avg_tract': 'Asian any',\n",
+    "    'asian_adj_supply_hr_avg_tract': 'Asian high rated',\n",
+    "    'asian_totcost_any_avg_tract': 'Asian total cost',\n",
+    "    'native_hawaiian_pacific_islander_adj_supply_any_avg_tract': 'Native Hawaiian Pacific Islander any',\n",
+    "    'native_hawaiian_pacific_islander_adj_supply_hr_avg_tract': 'Native Hawaiian Pacific Islander high rated',\n",
+    "    'native_hawaiian_pacific_islander_totcost_any_avg_tract': 'Native Hawaiian Pacific Islander total cost',\n",
+    "    'other_race_adj_supply_any_avg_tract': 'Other race any',\n",
+    "    'other_race_adj_supply_hr_avg_tract': 'Other race high rated',\n",
+    "    'other_race_totcost_any_avg_tract': 'Other race total cost',\n",
+    "    'two_or_more_races_adj_supply_any_avg_tract': 'Two or more races any',\n",
+    "    'two_or_more_races_adj_supply_hr_avg_tract': 'Two or more races high rated',\n",
+    "    'two_or_more_races_totcost_any_avg_tract': 'Two or more races total cost',\n",
+    "    'hispanic_latino_adj_supply_any_avg_tract': 'Hispanic Latino any',\n",
+    "    'hispanic_latino_adj_supply_hr_avg_tract': 'Hispanic Latino high rated',\n",
+    "    'hispanic_latino_totcost_any_avg_tract': 'Hispanic Latino total cost',\n",
     "    'median_household_income': 'Median Household Income',\n",
     "    'gini_index': 'Gini Index',\n",
     "    'educational_attainment': 'Educational Attainment',\n",
@@ -96,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -120,16 +152,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>White</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>American Indian Alaska Native</th>\n",
-       "      <th>Asian</th>\n",
-       "      <th>Native Hawaiian Pacific Islander</th>\n",
-       "      <th>Other Race</th>\n",
-       "      <th>Two or More Races</th>\n",
-       "      <th>Hispanic Latino</th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
+       "      <th>White any</th>\n",
+       "      <th>White high rated</th>\n",
+       "      <th>White total cost</th>\n",
+       "      <th>Black any</th>\n",
+       "      <th>Black high rated</th>\n",
+       "      <th>Black total cost</th>\n",
+       "      <th>American Indian Alaska Native any</th>\n",
+       "      <th>American Indian Alaska Native high rated</th>\n",
+       "      <th>American Indian Alaska Native total cost</th>\n",
+       "      <th>Asian any</th>\n",
        "      <th>...</th>\n",
        "      <th>white</th>\n",
        "      <th>black</th>\n",
@@ -147,15 +179,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.027303</td>\n",
+       "      <td>0.007869</td>\n",
+       "      <td>141.404892</td>\n",
        "      <td>0.040353</td>\n",
+       "      <td>0.011630</td>\n",
+       "      <td>145.017502</td>\n",
        "      <td>0.000002</td>\n",
+       "      <td>5.932382e-14</td>\n",
+       "      <td>135.126480</td>\n",
        "      <td>6.304092e-07</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.081921</td>\n",
-       "      <td>7.468044e-07</td>\n",
-       "      <td>0.062561</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27001</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000458</td>\n",
        "      <td>0.000042</td>\n",
@@ -171,15 +203,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.229566</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>48.881134</td>\n",
        "      <td>0.668083</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>39.188812</td>\n",
        "      <td>0.097253</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>82.443626</td>\n",
        "      <td>6.680830e-01</td>\n",
-       "      <td>3.401247e-08</td>\n",
-       "      <td>0.047095</td>\n",
-       "      <td>5.170830e-01</td>\n",
-       "      <td>0.473471</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27001</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000446</td>\n",
        "      <td>0.000020</td>\n",
@@ -195,15 +227,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.463983</td>\n",
+       "      <td>0.078133</td>\n",
+       "      <td>147.899124</td>\n",
        "      <td>0.341689</td>\n",
+       "      <td>0.050960</td>\n",
+       "      <td>150.966522</td>\n",
        "      <td>0.301611</td>\n",
+       "      <td>3.909673e-02</td>\n",
+       "      <td>151.896408</td>\n",
        "      <td>4.202191e-01</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.420219</td>\n",
-       "      <td>4.140471e-01</td>\n",
-       "      <td>0.580718</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27001</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000719</td>\n",
        "      <td>0.000079</td>\n",
@@ -219,15 +251,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.413980</td>\n",
+       "      <td>0.027758</td>\n",
+       "      <td>71.953590</td>\n",
        "      <td>0.568615</td>\n",
+       "      <td>0.042709</td>\n",
+       "      <td>52.525444</td>\n",
        "      <td>0.921216</td>\n",
+       "      <td>7.764238e-02</td>\n",
+       "      <td>57.557652</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.141978</td>\n",
-       "      <td>7.928232e-01</td>\n",
-       "      <td>0.728222</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27001</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000593</td>\n",
        "      <td>0.000070</td>\n",
@@ -244,14 +276,14 @@
        "      <th>4</th>\n",
        "      <td>0.012008</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>72.200478</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0.008861</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27001</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000406</td>\n",
        "      <td>0.000011</td>\n",
@@ -266,56 +298,63 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      White     Black  American Indian Alaska Native         Asian  \\\n",
-       "0  0.027303  0.040353                       0.000002  6.304092e-07   \n",
-       "1  0.229566  0.668083                       0.097253  6.680830e-01   \n",
-       "2  0.463983  0.341689                       0.301611  4.202191e-01   \n",
-       "3  0.413980  0.568615                       0.921216  0.000000e+00   \n",
-       "4  0.012008  0.000000                       0.000000  0.000000e+00   \n",
+       "   White any  White high rated  White total cost  Black any  Black high rated  \\\n",
+       "0   0.027303          0.007869        141.404892   0.040353          0.011630   \n",
+       "1   0.229566          0.000000         48.881134   0.668083          0.000000   \n",
+       "2   0.463983          0.078133        147.899124   0.341689          0.050960   \n",
+       "3   0.413980          0.027758         71.953590   0.568615          0.042709   \n",
+       "4   0.012008          0.000000         72.200478   0.000000          0.000000   \n",
        "\n",
-       "   Native Hawaiian Pacific Islander  Other Race  Two or More Races  \\\n",
-       "0                      0.000000e+00    0.081921       7.468044e-07   \n",
-       "1                      3.401247e-08    0.047095       5.170830e-01   \n",
-       "2                      0.000000e+00    0.420219       4.140471e-01   \n",
-       "3                      0.000000e+00    0.141978       7.928232e-01   \n",
-       "4                      0.000000e+00    0.000000       0.000000e+00   \n",
+       "   Black total cost  American Indian Alaska Native any  \\\n",
+       "0        145.017502                           0.000002   \n",
+       "1         39.188812                           0.097253   \n",
+       "2        150.966522                           0.301611   \n",
+       "3         52.525444                           0.921216   \n",
+       "4          0.000000                           0.000000   \n",
        "\n",
-       "   Hispanic Latino  state  county  ...     white     black  \\\n",
-       "0         0.062561     27   27001  ...  0.000458  0.000042   \n",
-       "1         0.473471     27   27001  ...  0.000446  0.000020   \n",
-       "2         0.580718     27   27001  ...  0.000719  0.000079   \n",
-       "3         0.728222     27   27001  ...  0.000593  0.000070   \n",
-       "4         0.008861     27   27001  ...  0.000406  0.000011   \n",
+       "   American Indian Alaska Native high rated  \\\n",
+       "0                              5.932382e-14   \n",
+       "1                              0.000000e+00   \n",
+       "2                              3.909673e-02   \n",
+       "3                              7.764238e-02   \n",
+       "4                              0.000000e+00   \n",
        "\n",
-       "   am_indian_alaska_native     asian  native_hawaiian_pacific_islander  \\\n",
-       "0                 0.000741  0.000063                          0.000000   \n",
-       "1                 0.001586  0.000004                          0.001367   \n",
-       "2                 0.000672  0.000048                          0.000000   \n",
-       "3                 0.002534  0.000000                          0.000000   \n",
-       "4                 0.000000  0.000052                          0.000000   \n",
+       "   American Indian Alaska Native total cost     Asian any  ...     white  \\\n",
+       "0                                135.126480  6.304092e-07  ...  0.000458   \n",
+       "1                                 82.443626  6.680830e-01  ...  0.000446   \n",
+       "2                                151.896408  4.202191e-01  ...  0.000719   \n",
+       "3                                 57.557652  0.000000e+00  ...  0.000593   \n",
+       "4                                  0.000000  0.000000e+00  ...  0.000406   \n",
        "\n",
-       "   other_race  two_or_more_races  hispanic_latino  total_tract_population  \\\n",
-       "0    0.000308           0.000133         0.000150                    2240   \n",
-       "1    0.000048           0.000732         0.000067                    2284   \n",
-       "2    0.000019           0.000514         0.000240                    3483   \n",
-       "3    0.000019           0.000375         0.000134                    2970   \n",
-       "4    0.000000           0.000085         0.000033                    1905   \n",
+       "      black  am_indian_alaska_native     asian  \\\n",
+       "0  0.000042                 0.000741  0.000063   \n",
+       "1  0.000020                 0.001586  0.000004   \n",
+       "2  0.000079                 0.000672  0.000048   \n",
+       "3  0.000070                 0.002534  0.000000   \n",
+       "4  0.000011                 0.000000  0.000052   \n",
        "\n",
-       "   tract_weight  \n",
-       "0      0.000404  \n",
-       "1      0.000411  \n",
-       "2      0.000627  \n",
-       "3      0.000535  \n",
-       "4      0.000343  \n",
+       "   native_hawaiian_pacific_islander  other_race  two_or_more_races  \\\n",
+       "0                          0.000000    0.000308           0.000133   \n",
+       "1                          0.001367    0.000048           0.000732   \n",
+       "2                          0.000000    0.000019           0.000514   \n",
+       "3                          0.000000    0.000019           0.000375   \n",
+       "4                          0.000000    0.000000           0.000085   \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "   hispanic_latino  total_tract_population  tract_weight  \n",
+       "0         0.000150                    2240      0.000404  \n",
+       "1         0.000067                    2284      0.000411  \n",
+       "2         0.000240                    3483      0.000627  \n",
+       "3         0.000134                    2970      0.000535  \n",
+       "4         0.000033                    1905      0.000343  \n",
+       "\n",
+       "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
