--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -388,7 +388,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_regression_analysis(covariates_list, outcome_variable, data, model_names, weights_variable=\"total_tract_population\", scalar=1):\n",
+    "def run_regression_analysis(\n",
+    "    covariates_list,\n",
+    "    outcome_variable,\n",
+    "    data,\n",
+    "    model_names,\n",
+    "    weights_variable=\"total_tract_population\",\n",
+    "    scalar=1,\n",
+    "):\n",
     "    regression_results = {}\n",
     "    rmse_results = {}\n",
     "\n",
@@ -472,7 +479,12 @@
     "\n",
     "# Call the function to run the regression analysis\n",
     "regression_results, rmse_results = run_regression_analysis(\n",
-    "    covariates_list, outcome_variable, data, model_names, weights_variable=\"total_tract_population\", scalar = scalar\n",
+    "    covariates_list,\n",
+    "    outcome_variable,\n",
+    "    data,\n",
+    "    model_names,\n",
+    "    weights_variable=\"total_tract_population\",\n",
+    "    scalar=scalar,\n",
     ")\n",
     "\n",
     "# Generate the summary table\n",
@@ -484,8 +496,8 @@
     "    info_dict={\n",
     "        \"N\": lambda x: f\"{x.nobs:.0f}\",\n",
     "        \"R2\": lambda x: f\"{x.rsquared:.3f}\",\n",
-    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\"\n",
-    "    }\n",
+    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\",\n",
+    "    },\n",
     ")\n",
     "\n",
     "# Convert the summary table to a DataFrame\n",
@@ -869,21 +881,21 @@
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
-    "    'const',\n",
+    "    \"const\",\n",
     "]\n",
     "\n",
     "# Separate list for non-standard error metrics\n",
-    "metrics_list = ['N', 'R2', 'Adjusted R2', 'RMSE']\n",
+    "metrics_list = [\"N\", \"R2\", \"Adjusted R2\", \"RMSE\"]\n",
     "\n",
     "# Last non-empty row name\n",
-    "last_non_empty = ''\n",
+    "last_non_empty = \"\"\n",
     "\n",
     "# New index\n",
     "new_index = []\n",
     "\n",
     "for name in summary_df1.index:\n",
-    "    if name == '':\n",
-    "        new_index.append(last_non_empty + '_se')\n",
+    "    if name == \"\":\n",
+    "        new_index.append(last_non_empty + \"_se\")\n",
     "    else:\n",
     "        new_index.append(name)\n",
     "        last_non_empty = name\n",
@@ -892,7 +904,12 @@
     "summary_df1.index = new_index\n",
     "\n",
     "# Create a new list that alternates between each variable name and its corresponding \"_se\" version\n",
-    "covariate_list_ordered_extended = [item for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered] for item in sublist if item in summary_df1.index]\n",
+    "covariate_list_ordered_extended = [\n",
+    "    item\n",
+    "    for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered]\n",
+    "    for item in sublist\n",
+    "    if item in summary_df1.index\n",
+    "]\n",
     "\n",
     "# Add the non-standard error metrics to the list\n",
     "covariate_list_ordered_extended += metrics_list\n",
@@ -901,10 +918,10 @@
     "summary_df_ordered = summary_df1.reindex(covariate_list_ordered_extended)\n",
     "\n",
     "# Specify the indexes that end with '_se' that you want to replace\n",
-    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith('_se')]\n",
+    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith(\"_se\")]\n",
     "\n",
     "# Create a mapping dictionary to replace specified indexes with an empty string\n",
-    "index_replace_dict = {index: '' for index in indexes_to_replace}\n",
+    "index_replace_dict = {index: \"\" for index in indexes_to_replace}\n",
     "\n",
     "# Use the .rename method with the mapping dictionary\n",
     "summary_df_ordered.rename(index=index_replace_dict, inplace=True)\n",
@@ -930,7 +947,12 @@
     "\n",
     "# Call the function to run the regression analysis\n",
     "regression_results, rmse_results = run_regression_analysis(\n",
-    "    covariates_list, outcome_variable, data, model_names, weights_variable=\"total_tract_population\", scalar = scalar\n",
+    "    covariates_list,\n",
+    "    outcome_variable,\n",
+    "    data,\n",
+    "    model_names,\n",
+    "    weights_variable=\"total_tract_population\",\n",
+    "    scalar=scalar,\n",
     ")\n",
     "\n",
     "# Generate the summary table\n",
@@ -942,8 +964,8 @@
     "    info_dict={\n",
     "        \"N\": lambda x: f\"{x.nobs:.0f}\",\n",
     "        \"R2\": lambda x: f\"{x.rsquared:.3f}\",\n",
-    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\"\n",
-    "    }\n",
+    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\",\n",
+    "    },\n",
     ")\n",
     "\n",
     "# Convert the summary table to a DataFrame\n",
@@ -1327,21 +1349,21 @@
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
-    "    'const',\n",
+    "    \"const\",\n",
     "]\n",
     "\n",
     "# Separate list for non-standard error metrics\n",
-    "metrics_list = ['N', 'R2', 'Adjusted R2', 'RMSE']\n",
+    "metrics_list = [\"N\", \"R2\", \"Adjusted R2\", \"RMSE\"]\n",
     "\n",
     "# Last non-empty row name\n",
-    "last_non_empty = ''\n",
+    "last_non_empty = \"\"\n",
     "\n",
     "# New index\n",
     "new_index = []\n",
     "\n",
     "for name in summary_df1.index:\n",
-    "    if name == '':\n",
-    "        new_index.append(last_non_empty + '_se')\n",
+    "    if name == \"\":\n",
+    "        new_index.append(last_non_empty + \"_se\")\n",
     "    else:\n",
     "        new_index.append(name)\n",
     "        last_non_empty = name\n",
@@ -1350,7 +1372,12 @@
     "summary_df1.index = new_index\n",
     "\n",
     "# Create a new list that alternates between each variable name and its corresponding \"_se\" version\n",
-    "covariate_list_ordered_extended = [item for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered] for item in sublist if item in summary_df1.index]\n",
+    "covariate_list_ordered_extended = [\n",
+    "    item\n",
+    "    for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered]\n",
+    "    for item in sublist\n",
+    "    if item in summary_df1.index\n",
+    "]\n",
     "\n",
     "# Add the non-standard error metrics to the list\n",
     "covariate_list_ordered_extended += metrics_list\n",
@@ -1359,10 +1386,10 @@
     "summary_df_ordered = summary_df1.reindex(covariate_list_ordered_extended)\n",
     "\n",
     "# Specify the indexes that end with '_se' that you want to replace\n",
-    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith('_se')]\n",
+    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith(\"_se\")]\n",
     "\n",
     "# Create a mapping dictionary to replace specified indexes with an empty string\n",
-    "index_replace_dict = {index: '' for index in indexes_to_replace}\n",
+    "index_replace_dict = {index: \"\" for index in indexes_to_replace}\n",
     "\n",
     "# Use the .rename method with the mapping dictionary\n",
     "summary_df_ordered.rename(index=index_replace_dict, inplace=True)\n",
@@ -1388,7 +1415,12 @@
     "\n",
     "# Call the function to run the regression analysis\n",
     "regression_results, rmse_results = run_regression_analysis(\n",
-    "    covariates_list, outcome_variable, data, model_names, weights_variable=\"total_tract_population\", scalar = scalar\n",
+    "    covariates_list,\n",
+    "    outcome_variable,\n",
+    "    data,\n",
+    "    model_names,\n",
+    "    weights_variable=\"total_tract_population\",\n",
+    "    scalar=scalar,\n",
     ")\n",
     "\n",
     "# Generate the summary table\n",
@@ -1400,8 +1432,8 @@
     "    info_dict={\n",
     "        \"N\": lambda x: f\"{x.nobs:.0f}\",\n",
     "        \"R2\": lambda x: f\"{x.rsquared:.3f}\",\n",
-    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\"\n",
-    "    }\n",
+    "        \"Adjusted R2\": lambda x: f\"{x.rsquared_adj:.3f}\",\n",
+    "    },\n",
     ")\n",
     "\n",
     "# Convert the summary table to a DataFrame\n",
@@ -1857,21 +1889,21 @@
     "    \"Commute Time\",\n",
     "    \"Without Health Insurance\",\n",
     "    \"Population Density\",\n",
-    "    'const',\n",
+    "    \"const\",\n",
     "]\n",
     "\n",
     "# Separate list for non-standard error metrics\n",
-    "metrics_list = ['N', 'R2', 'Adjusted R2', 'RMSE']\n",
+    "metrics_list = [\"N\", \"R2\", \"Adjusted R2\", \"RMSE\"]\n",
     "\n",
     "# Last non-empty row name\n",
-    "last_non_empty = ''\n",
+    "last_non_empty = \"\"\n",
     "\n",
     "# New index\n",
     "new_index = []\n",
     "\n",
     "for name in summary_df1.index:\n",
-    "    if name == '':\n",
-    "        new_index.append(last_non_empty + '_se')\n",
+    "    if name == \"\":\n",
+    "        new_index.append(last_non_empty + \"_se\")\n",
     "    else:\n",
     "        new_index.append(name)\n",
     "        last_non_empty = name\n",
@@ -1880,7 +1912,12 @@
     "summary_df1.index = new_index\n",
     "\n",
     "# Create a new list that alternates between each variable name and its corresponding \"_se\" version\n",
-    "covariate_list_ordered_extended = [item for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered] for item in sublist if item in summary_df1.index]\n",
+    "covariate_list_ordered_extended = [\n",
+    "    item\n",
+    "    for sublist in [[var, var + \"_se\"] for var in covariate_list_ordered]\n",
+    "    for item in sublist\n",
+    "    if item in summary_df1.index\n",
+    "]\n",
     "\n",
     "# Add the non-standard error metrics to the list\n",
     "covariate_list_ordered_extended += metrics_list\n",
@@ -1889,10 +1926,10 @@
     "summary_df_ordered = summary_df1.reindex(covariate_list_ordered_extended)\n",
     "\n",
     "# Specify the indexes that end with '_se' that you want to replace\n",
-    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith('_se')]\n",
+    "indexes_to_replace = [name for name in summary_df_ordered.index if name.endswith(\"_se\")]\n",
     "\n",
     "# Create a mapping dictionary to replace specified indexes with an empty string\n",
-    "index_replace_dict = {index: '' for index in indexes_to_replace}\n",
+    "index_replace_dict = {index: \"\" for index in indexes_to_replace}\n",
     "\n",
     "# Use the .rename method with the mapping dictionary\n",
     "summary_df_ordered.rename(index=index_replace_dict, inplace=True)\n",
