--- a/notebooks/produce_stats2.ipynb
+++ b/notebooks/produce_stats2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "Index(['tract', 'density'], dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1231966324\n",
+       "1    1231966424\n",
+       "2    1231966524\n",
+       "3    1231966624\n",
+       "4    1231986725\n",
+       "Name: tract, dtype: int32"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"tract\"].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read and merge new race population shares\n",
+    "- Race shares are constructed using tract race population divided by state total population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,215 +215,139 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>White any</th>\n",
-       "      <th>White high rated</th>\n",
-       "      <th>White total cost</th>\n",
-       "      <th>Black any</th>\n",
-       "      <th>Black high rated</th>\n",
-       "      <th>Black total cost</th>\n",
-       "      <th>American Indian Alaska Native any</th>\n",
-       "      <th>American Indian Alaska Native high rated</th>\n",
-       "      <th>American Indian Alaska Native total cost</th>\n",
-       "      <th>Asian any</th>\n",
-       "      <th>...</th>\n",
-       "      <th>black</th>\n",
-       "      <th>am_indian_alaska_native</th>\n",
-       "      <th>asian</th>\n",
-       "      <th>native_hawaiian_pacific_islander</th>\n",
-       "      <th>other_race</th>\n",
-       "      <th>two_or_more_races</th>\n",
-       "      <th>hispanic_latino</th>\n",
-       "      <th>total_tract_population</th>\n",
-       "      <th>Population Density</th>\n",
-       "      <th>tract_weight</th>\n",
+       "      <th>county</th>\n",
+       "      <th>tract</th>\n",
+       "      <th>white_share_state</th>\n",
+       "      <th>black_share_state</th>\n",
+       "      <th>am_indian_alaska_native_share_state</th>\n",
+       "      <th>asian_share_state</th>\n",
+       "      <th>other_race_share_state</th>\n",
+       "      <th>hispanic_latino_share_state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.027303</td>\n",
-       "      <td>0.007869</td>\n",
-       "      <td>141.404892</td>\n",
-       "      <td>0.040353</td>\n",
-       "      <td>0.011630</td>\n",
-       "      <td>145.017502</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>5.932382e-14</td>\n",
-       "      <td>135.126480</td>\n",
-       "      <td>6.304092e-07</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000042</td>\n",
-       "      <td>0.000741</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000308</td>\n",
-       "      <td>0.000133</td>\n",
-       "      <td>0.000150</td>\n",
-       "      <td>2240</td>\n",
-       "      <td>0.000218</td>\n",
-       "      <td>0.000404</td>\n",
+       "      <td>27001</td>\n",
+       "      <td>1231966324</td>\n",
+       "      <td>0.000379</td>\n",
+       "      <td>2.696204e-06</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>0.000579</td>\n",
+       "      <td>0.000008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.229566</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>48.881134</td>\n",
-       "      <td>0.668083</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>39.188812</td>\n",
-       "      <td>0.097253</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>82.443626</td>\n",
-       "      <td>6.680830e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000020</td>\n",
-       "      <td>0.001586</td>\n",
+       "      <td>27001</td>\n",
+       "      <td>1231966424</td>\n",
+       "      <td>0.000369</td>\n",
+       "      <td>1.258228e-06</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000920</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>0.001367</td>\n",
-       "      <td>0.000048</td>\n",
-       "      <td>0.000732</td>\n",
-       "      <td>0.000067</td>\n",
-       "      <td>2284</td>\n",
-       "      <td>0.000226</td>\n",
-       "      <td>0.000411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.463983</td>\n",
-       "      <td>0.078133</td>\n",
-       "      <td>147.899124</td>\n",
-       "      <td>0.341689</td>\n",
-       "      <td>0.050960</td>\n",
-       "      <td>150.966522</td>\n",
-       "      <td>0.301611</td>\n",
-       "      <td>3.909673e-02</td>\n",
-       "      <td>151.896408</td>\n",
-       "      <td>4.202191e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000079</td>\n",
-       "      <td>0.000672</td>\n",
-       "      <td>0.000048</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000019</td>\n",
-       "      <td>0.000514</td>\n",
-       "      <td>0.000240</td>\n",
-       "      <td>3483</td>\n",
-       "      <td>0.004462</td>\n",
-       "      <td>0.000627</td>\n",
+       "      <td>27001</td>\n",
+       "      <td>1231966524</td>\n",
+       "      <td>0.000596</td>\n",
+       "      <td>5.032914e-06</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.000013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.413980</td>\n",
-       "      <td>0.027758</td>\n",
-       "      <td>71.953590</td>\n",
-       "      <td>0.568615</td>\n",
-       "      <td>0.042709</td>\n",
-       "      <td>52.525444</td>\n",
-       "      <td>0.921216</td>\n",
-       "      <td>7.764238e-02</td>\n",
-       "      <td>57.557652</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000070</td>\n",
-       "      <td>0.002534</td>\n",
+       "      <td>27001</td>\n",
+       "      <td>1231966624</td>\n",
+       "      <td>0.000491</td>\n",
+       "      <td>4.493673e-06</td>\n",
+       "      <td>0.000026</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000019</td>\n",
-       "      <td>0.000375</td>\n",
-       "      <td>0.000134</td>\n",
-       "      <td>2970</td>\n",
-       "      <td>0.000295</td>\n",
-       "      <td>0.000535</td>\n",
+       "      <td>0.000047</td>\n",
+       "      <td>0.000007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.012008</td>\n",
+       "      <td>27001</td>\n",
+       "      <td>1231986725</td>\n",
+       "      <td>0.000337</td>\n",
+       "      <td>7.189876e-07</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>72.200478</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000052</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000085</td>\n",
-       "      <td>0.000033</td>\n",
-       "      <td>1905</td>\n",
-       "      <td>0.000295</td>\n",
-       "      <td>0.000343</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   White any  White high rated  White total cost  Black any  Black high rated  \\\n",
-       "0   0.027303          0.007869        141.404892   0.040353          0.011630   \n",
-       "1   0.229566          0.000000         48.881134   0.668083          0.000000   \n",
-       "2   0.463983          0.078133        147.899124   0.341689          0.050960   \n",
-       "3   0.413980          0.027758         71.953590   0.568615          0.042709   \n",
-       "4   0.012008          0.000000         72.200478   0.000000          0.000000   \n",
+       "   county       tract  white_share_state  black_share_state  \\\n",
+       "0   27001  1231966324           0.000379       2.696204e-06   \n",
+       "1   27001  1231966424           0.000369       1.258228e-06   \n",
+       "2   27001  1231966524           0.000596       5.032914e-06   \n",
+       "3   27001  1231966624           0.000491       4.493673e-06   \n",
+       "4   27001  1231986725           0.000337       7.189876e-07   \n",
        "\n",
-       "   Black total cost  American Indian Alaska Native any  \\\n",
-       "0        145.017502                           0.000002   \n",
-       "1         39.188812                           0.097253   \n",
-       "2        150.966522                           0.301611   \n",
-       "3         52.525444                           0.921216   \n",
-       "4          0.000000                           0.000000   \n",
+       "   am_indian_alaska_native_share_state  asian_share_state  \\\n",
+       "0                             0.000008           0.000031   \n",
+       "1                             0.000017           0.000002   \n",
+       "2                             0.000007           0.000023   \n",
+       "3                             0.000026           0.000000   \n",
+       "4                             0.000000           0.000025   \n",
        "\n",
-       "   American Indian Alaska Native high rated  \\\n",
-       "0                              5.932382e-14   \n",
-       "1                              0.000000e+00   \n",
-       "2                              3.909673e-02   \n",
-       "3                              7.764238e-02   \n",
-       "4                              0.000000e+00   \n",
-       "\n",
-       "   American Indian Alaska Native total cost     Asian any  ...     black  \\\n",
-       "0                                135.126480  6.304092e-07  ...  0.000042   \n",
-       "1                                 82.443626  6.680830e-01  ...  0.000020   \n",
-       "2                                151.896408  4.202191e-01  ...  0.000079   \n",
-       "3                                 57.557652  0.000000e+00  ...  0.000070   \n",
-       "4                                  0.000000  0.000000e+00  ...  0.000011   \n",
-       "\n",
-       "   am_indian_alaska_native     asian  native_hawaiian_pacific_islander  \\\n",
-       "0                 0.000741  0.000063                          0.000000   \n",
-       "1                 0.001586  0.000004                          0.001367   \n",
-       "2                 0.000672  0.000048                          0.000000   \n",
-       "3                 0.002534  0.000000                          0.000000   \n",
-       "4                 0.000000  0.000052                          0.000000   \n",
-       "\n",
-       "   other_race  two_or_more_races  hispanic_latino  total_tract_population  \\\n",
-       "0    0.000308           0.000133         0.000150                    2240   \n",
-       "1    0.000048           0.000732         0.000067                    2284   \n",
-       "2    0.000019           0.000514         0.000240                    3483   \n",
-       "3    0.000019           0.000375         0.000134                    2970   \n",
-       "4    0.000000           0.000085         0.000033                    1905   \n",
-       "\n",
-       "   Population Density  tract_weight  \n",
-       "0            0.000218      0.000404  \n",
-       "1            0.000226      0.000411  \n",
-       "2            0.004462      0.000627  \n",
-       "3            0.000295      0.000535  \n",
-       "4            0.000295      0.000343  \n",
-       "\n",
-       "[5 rows x 49 columns]"
+       "   other_race_share_state  hispanic_latino_share_state  \n",
+       "0                0.000579                     0.000008  \n",
+       "1                0.000920                     0.000004  \n",
+       "2                0.000051                     0.000013  \n",
+       "3                0.000047                     0.000007  \n",
+       "4                0.000003                     0.000002  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "race_shares = pd.read_csv(\n",
+    "    \"../data/acs_data_all.csv\",\n",
+    "    usecols=[\n",
+    "        \"tract\",\n",
+    "        \"white_share_state\",\n",
+    "        \"black_share_state\",\n",
+    "        \"am_indian_alaska_native_share_state\",\n",
+    "        \"asian_share_state\",\n",
+    "        \"other_race_share_state\",\n",
+    "        \"hispanic_latino_share_state\",\n",
+    "    ],\n",
+    "    dtype={\n",
+    "        \"tract\": np.int32,\n",
+    "        \"white_share_state\": np.float32,\n",
+    "        \"black_share_state\": np.float32,\n",
+    "        \"am_indian_alaska_native_share_state\": np.float32,\n",
+    "        \"asian_share_state\": np.float32,\n",
+    "        \"other_race_share_state\": np.float32,\n",
+    "        \"hispanic_latino_share_state\": np.float32,\n",
+    "    },\n",
+    ")\n",
+    "race_shares.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge data and race_shares using census tract\n",
+    "data = data.merge(race_shares, on=\"tract\", how=\"left\")\n",
+    "\n",
+    "# Rename race_shares columns"
    ]
   },
   {
@@ -1106,15 +1063,21 @@
     "# Create an empty dataframe for the matrix\n",
     "matrix1 = pd.DataFrame(index=race_variables1, columns=race_variables1)\n",
     "\n",
+    "\n",
     "def weighted_sample(series, weights):\n",
     "    # Repeat elements according to the weights\n",
     "    return np.repeat(series, weights)\n",
     "\n",
+    "\n",
     "for row_var in race_variables1:\n",
     "    for col_var in race_variables1:\n",
     "        if row_var != col_var:\n",
-    "            row_weighted_sample = weighted_sample(data[row_var], data[weight_map1[row_var]])\n",
-    "            col_weighted_sample = weighted_sample(data[col_var], data[weight_map1[col_var]])\n",
+    "            row_weighted_sample = weighted_sample(\n",
+    "                data[row_var], data[weight_map1[row_var]]\n",
+    "            )\n",
+    "            col_weighted_sample = weighted_sample(\n",
+    "                data[col_var], data[weight_map1[col_var]]\n",
+    "            )\n",
     "\n",
     "            # Perform a t-test\n",
     "            t_stat, p_value = stats.ttest_ind(row_weighted_sample, col_weighted_sample)\n",
@@ -1129,7 +1092,7 @@
     "\n",
     "            # Store the difference and significance\n",
     "            matrix1.loc[row_var, col_var] = row_weighted_mean - col_weighted_mean\n",
-    "            significance_matrix1.loc[row_var, col_var] = '*' if p_value < 0.05 else ''"
+    "            significance_matrix1.loc[row_var, col_var] = \"*\" if p_value < 0.05 else \"\""
    ]
   },
   {
@@ -1553,8 +1516,12 @@
     "for row_var in race_variables2:\n",
     "    for col_var in race_variables2:\n",
     "        if row_var != col_var:\n",
-    "            row_weighted_sample = weighted_sample(data[row_var], data[weight_map2[row_var]])\n",
-    "            col_weighted_sample = weighted_sample(data[col_var], data[weight_map2[col_var]])\n",
+    "            row_weighted_sample = weighted_sample(\n",
+    "                data[row_var], data[weight_map2[row_var]]\n",
+    "            )\n",
+    "            col_weighted_sample = weighted_sample(\n",
+    "                data[col_var], data[weight_map2[col_var]]\n",
+    "            )\n",
     "\n",
     "            # Perform a t-test\n",
     "            t_stat, p_value = stats.ttest_ind(row_weighted_sample, col_weighted_sample)\n",
@@ -1569,7 +1536,7 @@
     "\n",
     "            # Store the difference and significance\n",
     "            matrix2.loc[row_var, col_var] = row_weighted_mean - col_weighted_mean\n",
-    "            significance_matrix2.loc[row_var, col_var] = '*' if p_value < 0.05 else ''"
+    "            significance_matrix2.loc[row_var, col_var] = \"*\" if p_value < 0.05 else \"\""
    ]
   },
   {
@@ -2041,8 +2008,12 @@
     "for row_var in race_variables3:\n",
     "    for col_var in race_variables3:\n",
     "        if row_var != col_var:\n",
-    "            row_weighted_sample = weighted_sample(data[row_var], data[weight_map3[row_var]])\n",
-    "            col_weighted_sample = weighted_sample(data[col_var], data[weight_map3[col_var]])\n",
+    "            row_weighted_sample = weighted_sample(\n",
+    "                data[row_var], data[weight_map3[row_var]]\n",
+    "            )\n",
+    "            col_weighted_sample = weighted_sample(\n",
+    "                data[col_var], data[weight_map3[col_var]]\n",
+    "            )\n",
     "\n",
     "            # Perform a t-test\n",
     "            t_stat, p_value = stats.ttest_ind(row_weighted_sample, col_weighted_sample)\n",
@@ -2057,7 +2028,7 @@
     "\n",
     "            # Store the difference and significance\n",
     "            matrix3.loc[row_var, col_var] = row_weighted_mean - col_weighted_mean\n",
-    "            significance_matrix3.loc[row_var, col_var] = '*' if p_value < 0.05 else ''"
+    "            significance_matrix3.loc[row_var, col_var] = \"*\" if p_value < 0.05 else \"\""
    ]
   },
   {
