--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -36,7 +36,7 @@
     "tract_pop = pd.read_csv(\n",
     "    \"../data/acs_data.csv\",\n",
     "    usecols=[\"tract\", \"total_tract_population\"],\n",
-    "    dtype={\"total_tract_population\": np.float32, \"tract\": np.int32},\n",
+    "    dtype={\"total_tract_population\": np.float32, \"tract\": str},\n",
     ")\n",
     "tract_pop.columns"
    ]
@@ -59,9 +59,9 @@
     "    \"B01003_001E_adj_supply_any_avg_tract\": np.float32,\n",
     "    \"B01003_001E_adj_supply_hr_avg_tract\": np.float32,\n",
     "    \"B01003_001E_totcost_any_avg_tract\": np.float32,\n",
-    "    \"state\": np.int32,\n",
-    "    \"county\": np.int32,\n",
-    "    \"tract\": np.int32,\n",
+    "    \"state\": str,\n",
+    "    \"county\": str,\n",
+    "    \"tract\": str,\n",
     "    \"median_household_income\": np.float32,\n",
     "    \"gini_index\": np.float32,\n",
     "    \"educational_attainment\": np.float32,\n",
@@ -195,7 +195,7 @@
        "      <td>140.768204</td>\n",
        "      <td>27</td>\n",
        "      <td>27001</td>\n",
-       "      <td>1231966324</td>\n",
+       "      <td>27001770100</td>\n",
        "      <td>4.6548</td>\n",
        "      <td>0.4291</td>\n",
        "      <td>0.142012</td>\n",
@@ -219,7 +219,7 @@
        "      <td>49.739838</td>\n",
        "      <td>27</td>\n",
        "      <td>27001</td>\n",
-       "      <td>1231966424</td>\n",
+       "      <td>27001770200</td>\n",
        "      <td>4.8580</td>\n",
        "      <td>0.3815</td>\n",
        "      <td>0.084266</td>\n",
@@ -243,7 +243,7 @@
        "      <td>147.445908</td>\n",
        "      <td>27</td>\n",
        "      <td>27001</td>\n",
-       "      <td>1231966524</td>\n",
+       "      <td>27001770300</td>\n",
        "      <td>4.4543</td>\n",
        "      <td>0.4515</td>\n",
        "      <td>0.155082</td>\n",
@@ -267,7 +267,7 @@
        "      <td>91.856232</td>\n",
        "      <td>27</td>\n",
        "      <td>27001</td>\n",
-       "      <td>1231966624</td>\n",
+       "      <td>27001770400</td>\n",
        "      <td>4.8708</td>\n",
        "      <td>0.4339</td>\n",
        "      <td>0.121503</td>\n",
@@ -291,7 +291,7 @@
        "      <td>59.393177</td>\n",
        "      <td>27</td>\n",
        "      <td>27001</td>\n",
-       "      <td>1231986725</td>\n",
+       "      <td>27001790501</td>\n",
        "      <td>5.0110</td>\n",
        "      <td>0.4564</td>\n",
        "      <td>0.087353</td>\n",
@@ -321,12 +321,12 @@
        "3                        0.420769                       0.028768   \n",
        "4                        0.009878                       0.000000   \n",
        "\n",
-       "   Average Total Cost of Any Provider  state  county       tract  \\\n",
-       "0                          140.768204     27   27001  1231966324   \n",
-       "1                           49.739838     27   27001  1231966424   \n",
-       "2                          147.445908     27   27001  1231966524   \n",
-       "3                           91.856232     27   27001  1231966624   \n",
-       "4                           59.393177     27   27001  1231986725   \n",
+       "   Average Total Cost of Any Provider state county        tract  \\\n",
+       "0                          140.768204    27  27001  27001770100   \n",
+       "1                           49.739838    27  27001  27001770200   \n",
+       "2                          147.445908    27  27001  27001770300   \n",
+       "3                           91.856232    27  27001  27001770400   \n",
+       "4                           59.393177    27  27001  27001790501   \n",
        "\n",
        "   Median Household Income  Gini Index  Educational Attainment  \\\n",
        "0                   4.6548      0.4291                0.142012   \n",
