--- a/notebooks/produce_stats2.ipynb
+++ b/notebooks/produce_stats2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "Index(['tract', 'density'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,14 +44,14 @@
     "density_pop = pd.read_csv(\n",
     "    \"../data/acs_data_all.csv\",\n",
     "    usecols=[\"tract\", \"density\"],\n",
-    "    dtype={\"density\": np.float32, \"tract\": np.int32},\n",
+    "    dtype={\"density\": np.float32, \"tract\": str},\n",
     ")\n",
     "density_pop.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,9 @@
     "    \"hispanic_latino_adj_supply_any_avg_tract\": np.float32,\n",
     "    \"hispanic_latino_adj_supply_hr_avg_tract\": np.float32,\n",
     "    \"hispanic_latino_totcost_any_avg_tract\": np.float32,\n",
-    "    \"state\": np.int32,\n",
-    "    \"county\": np.int32,\n",
-    "    \"tract\": np.int32,\n",
+    "    \"state\": str,\n",
+    "    \"county\": str,\n",
+    "    \"tract\": str,\n",
     "    \"median_household_income\": np.float32,\n",
     "    \"gini_index\": np.float32,\n",
     "    \"educational_attainment\": np.float32,\n",
@@ -158,21 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1231966324\n",
-       "1    1231966424\n",
-       "2    1231966524\n",
-       "3    1231966624\n",
-       "4    1231986725\n",
-       "Name: tract, dtype: int32"
+       "0    27001770100\n",
+       "1    27001770200\n",
+       "2    27001770300\n",
+       "3    27001770400\n",
+       "4    27001790501\n",
+       "Name: tract, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>county</th>\n",
        "      <th>tract</th>\n",
        "      <th>white_share_state</th>\n",
        "      <th>black_share_state</th>\n",
@@ -228,8 +227,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>27001</td>\n",
-       "      <td>1231966324</td>\n",
+       "      <td>27001770100</td>\n",
        "      <td>0.000379</td>\n",
        "      <td>2.696204e-06</td>\n",
        "      <td>0.000008</td>\n",
@@ -239,8 +237,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>27001</td>\n",
-       "      <td>1231966424</td>\n",
+       "      <td>27001770200</td>\n",
        "      <td>0.000369</td>\n",
        "      <td>1.258228e-06</td>\n",
        "      <td>0.000017</td>\n",
@@ -250,8 +247,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>27001</td>\n",
-       "      <td>1231966524</td>\n",
+       "      <td>27001770300</td>\n",
        "      <td>0.000596</td>\n",
        "      <td>5.032914e-06</td>\n",
        "      <td>0.000007</td>\n",
@@ -261,8 +257,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>27001</td>\n",
-       "      <td>1231966624</td>\n",
+       "      <td>27001770400</td>\n",
        "      <td>0.000491</td>\n",
        "      <td>4.493673e-06</td>\n",
        "      <td>0.000026</td>\n",
@@ -272,8 +267,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>27001</td>\n",
-       "      <td>1231986725</td>\n",
+       "      <td>27001790501</td>\n",
        "      <td>0.000337</td>\n",
        "      <td>7.189876e-07</td>\n",
        "      <td>0.000000</td>\n",
@@ -286,12 +280,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   county       tract  white_share_state  black_share_state  \\\n",
-       "0   27001  1231966324           0.000379       2.696204e-06   \n",
-       "1   27001  1231966424           0.000369       1.258228e-06   \n",
-       "2   27001  1231966524           0.000596       5.032914e-06   \n",
-       "3   27001  1231966624           0.000491       4.493673e-06   \n",
-       "4   27001  1231986725           0.000337       7.189876e-07   \n",
+       "         tract  white_share_state  black_share_state  \\\n",
+       "0  27001770100           0.000379       2.696204e-06   \n",
+       "1  27001770200           0.000369       1.258228e-06   \n",
+       "2  27001770300           0.000596       5.032914e-06   \n",
+       "3  27001770400           0.000491       4.493673e-06   \n",
+       "4  27001790501           0.000337       7.189876e-07   \n",
        "\n",
        "   am_indian_alaska_native_share_state  asian_share_state  \\\n",
        "0                             0.000008           0.000031   \n",
@@ -308,7 +302,7 @@
        "4                0.000003                     0.000002  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +320,7 @@
     "        \"hispanic_latino_share_state\",\n",
     "    ],\n",
     "    dtype={\n",
-    "        \"tract\": np.int32,\n",
+    "        \"tract\": str,\n",
     "        \"white_share_state\": np.float32,\n",
     "        \"black_share_state\": np.float32,\n",
     "        \"am_indian_alaska_native_share_state\": np.float32,\n",
@@ -340,14 +334,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Merge data and race_shares using census tract\n",
     "data = data.merge(race_shares, on=\"tract\", how=\"left\")\n",
     "\n",
-    "# Rename race_shares columns"
+    "# Rename race_shares columns\n",
+    "names_race_shares = {\n",
+    "        \"white_share_state\": \"Share of white population\",\n",
+    "        \"black_share_state\": \"Share of black population\",\n",
+    "        \"am_indian_alaska_native_share_state\": \"Share of American Indian or Alaska Native population\",\n",
+    "        \"asian_share_state\": \"Share of Asian population\",\n",
+    "        \"other_race_share_state\": \"Share of Other Race population\",\n",
+    "        \"hispanic_latino_share_state\": \"Share of Hispanic or Latino population\",\n",
+    "}\n",
+    "\n",
+    "share_variables = list(names_race_shares.values())\n",
+    "\n",
+    "data.rename(columns=names_race_shares, inplace=True)"
    ]
   },
   {
@@ -359,41 +365,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                            Mean Std Deviation\n",
-      "White any                                   0.57        (0.28)\n",
-      "White high rated                            0.13        (0.12)\n",
-      "White total cost                          179.35       (67.40)\n",
-      "Black any                                   0.59        (0.24)\n",
-      "Black high rated                            0.20        (0.11)\n",
-      "Black total cost                          214.47       (52.29)\n",
-      "American Indian Alaska Native any           0.59        (0.37)\n",
-      "American Indian Alaska Native high rated    0.12        (0.14)\n",
-      "American Indian Alaska Native total cost  135.05       (74.13)\n",
-      "Asian any                                   0.54        (0.24)\n",
-      "Asian high rated                            0.18        (0.10)\n",
-      "Asian total cost                          215.61       (59.33)\n",
-      "Other race any                              0.59        (0.27)\n",
-      "Other race high rated                       0.17        (0.12)\n",
-      "Other race total cost                     197.89       (62.22)\n",
-      "Hispanic Latino any                         0.59        (0.27)\n",
-      "Hispanic Latino high rated                  0.16        (0.12)\n",
-      "Hispanic Latino total cost                191.08       (65.01)\n",
-      "Median Household Income                     7.67        (2.86)\n",
-      "Gini Index                                  0.41        (0.06)\n",
-      "Educational Attainment                      0.24        (0.10)\n",
-      "Employment Status                           0.67        (0.08)\n",
-      "Housing Tenure                              0.73        (0.20)\n",
-      "Poverty Status                              0.10        (0.09)\n",
-      "Commute Time                                0.92        (0.04)\n",
-      "Without Health Insurance                    0.01        (0.01)\n",
-      "Population Density                          0.12        (0.17)\n"
+      "                                                      Mean Std Deviation\n",
+      "White any                                             0.57        (0.28)\n",
+      "White high rated                                      0.13        (0.12)\n",
+      "White total cost                                    179.35       (67.40)\n",
+      "Black any                                             0.59        (0.24)\n",
+      "Black high rated                                      0.20        (0.11)\n",
+      "Black total cost                                    214.47       (52.29)\n",
+      "American Indian Alaska Native any                     0.59        (0.37)\n",
+      "American Indian Alaska Native high rated              0.12        (0.14)\n",
+      "American Indian Alaska Native total cost            135.05       (74.13)\n",
+      "Asian any                                             0.54        (0.24)\n",
+      "Asian high rated                                      0.18        (0.10)\n",
+      "Asian total cost                                    215.61       (59.33)\n",
+      "Other race any                                        0.59        (0.27)\n",
+      "Other race high rated                                 0.17        (0.12)\n",
+      "Other race total cost                               197.89       (62.22)\n",
+      "Hispanic Latino any                                   0.59        (0.27)\n",
+      "Hispanic Latino high rated                            0.16        (0.12)\n",
+      "Hispanic Latino total cost                          191.08       (65.01)\n",
+      "Median Household Income                               7.67        (2.86)\n",
+      "Gini Index                                            0.41        (0.06)\n",
+      "Educational Attainment                                0.24        (0.10)\n",
+      "Employment Status                                     0.67        (0.08)\n",
+      "Housing Tenure                                        0.73        (0.20)\n",
+      "Poverty Status                                        0.10        (0.09)\n",
+      "Commute Time                                          0.92        (0.04)\n",
+      "Without Health Insurance                              0.01        (0.01)\n",
+      "Population Density                                    0.12        (0.17)\n",
+      "Share of white population                             0.00        (0.00)\n",
+      "Share of black population                             0.00        (0.00)\n",
+      "Share of American Indian or Alaska Native popul...    0.00        (0.00)\n",
+      "Share of Asian population                             0.00        (0.00)\n",
+      "Share of Other Race population                        0.01        (0.03)\n",
+      "Share of Hispanic or Latino population                0.00        (0.00)\n"
      ]
     }
    ],
@@ -430,7 +442,7 @@
     "\n",
     "racial_groups = list(variables.keys())[:18]\n",
     "racial_weights = list(variables.values())[:18]\n",
-    "other_covariates = list(variables.keys())[18:]\n",
+    "other_covariates = list(variables.keys())[18:] + share_variables\n",
     "\n",
     "summary_statistics = {}\n",
     "\n",
@@ -473,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1226,7 @@
        "Hispanic Latino any                    -0.006298                 NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1354,7 @@
        "Hispanic Latino any                                              NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1505,7 @@
        "Hispanic Latino any                    -0.006298                 NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1686,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1830,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1997,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2178,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2322,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2489,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2495,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2575,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
