--- a/notebooks/produce_regressions.ipynb
+++ b/notebooks/produce_regressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from math import sqrt\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from statsmodels.iolib.summary2 import summary_col\n",
-    "import itertools"
+    "import itertools\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -1935,6 +1936,18 @@
     "summary_df_ordered.rename(index=index_replace_dict, inplace=True)\n",
     "\n",
     "summary_df_ordered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a scatter plot of share of black population vs access to any provider\n",
+    "scatter_plot(\n",
+    "    x, y, x_label=\"Variable 1\", y_label=\"Variable 2\", title=\"Example Scatter Plot\"\n",
+    ")"
    ]
   }
  ],
