Update stats tables

--- a/notebooks/produce_stats2.ipynb
+++ b/notebooks/produce_stats2.ipynb
@@ -53,6 +53,56 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['state', 'county', 'tract', 'Share of White Population',\n",
+       "       'Share of Black Population',\n",
+       "       'Share of American Indian and Alaska Native Population',\n",
+       "       'Share of Asian Population', 'Share of Other Race Population',\n",
+       "       'Share of Hispanic or Latino Population'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shares_pop = pd.read_csv(\n",
+    "    \"../data/tract_population_shares.csv\",\n",
+    "    usecols=[\n",
+    "        \"state\",\n",
+    "        \"county\",\n",
+    "        \"tract\",\n",
+    "        \"Share of White Population\",\n",
+    "        \"Share of Black Population\",\n",
+    "        \"Share of American Indian and Alaska Native Population\",\n",
+    "        \"Share of Asian Population\",\n",
+    "        \"Share of Other Race Population\",\n",
+    "        \"Share of Hispanic or Latino Population\",\n",
+    "    ],\n",
+    "    dtype={\n",
+    "        \"state\": str,\n",
+    "        \"county\": str,\n",
+    "        \"tract\": str,\n",
+    "        \"Share of White Population\": np.float32,\n",
+    "        \"Share of Black Population\": np.float32,\n",
+    "        \"Share of American Indian and Alaska Native Population\": np.float32,\n",
+    "        \"Share of Asian Population\": np.float32,\n",
+    "        \"Share of Other Race Population\": np.float32,\n",
+    "        \"Share of Hispanic or Latino Population\": np.float32,\n",
+    "    },\n",
+    ")\n",
+    "shares_pop.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
@@ -158,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +222,7 @@
        "Name: tract, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +281,8 @@
        "      <td>0.000377</td>\n",
        "      <td>2.696204e-06</td>\n",
        "      <td>0.000008</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>0.000058</td>\n",
+       "      <td>3.055698e-06</td>\n",
+       "      <td>0.000004</td>\n",
        "      <td>0.000008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -241,7 +291,7 @@
        "      <td>0.000369</td>\n",
        "      <td>1.258228e-06</td>\n",
        "      <td>0.000017</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>7.189876e-07</td>\n",
        "      <td>0.000019</td>\n",
        "      <td>0.000004</td>\n",
        "    </tr>\n",
@@ -251,7 +301,7 @@
        "      <td>0.000584</td>\n",
        "      <td>5.032914e-06</td>\n",
        "      <td>0.000007</td>\n",
-       "      <td>0.000023</td>\n",
+       "      <td>2.336710e-06</td>\n",
        "      <td>0.000015</td>\n",
        "      <td>0.000013</td>\n",
        "    </tr>\n",
@@ -261,7 +311,7 @@
        "      <td>0.000491</td>\n",
        "      <td>2.696204e-06</td>\n",
        "      <td>0.000025</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.000008</td>\n",
        "      <td>0.000007</td>\n",
        "    </tr>\n",
@@ -271,7 +321,7 @@
        "      <td>0.000335</td>\n",
        "      <td>7.189876e-07</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000025</td>\n",
+       "      <td>2.516457e-06</td>\n",
        "      <td>0.000003</td>\n",
        "      <td>0.000002</td>\n",
        "    </tr>\n",
@@ -288,21 +338,21 @@
        "4  27001790501           0.000335       7.189876e-07   \n",
        "\n",
        "   am_indian_alaska_native_share_state  asian_share_state  \\\n",
-       "0                             0.000008           0.000031   \n",
-       "1                             0.000017           0.000002   \n",
-       "2                             0.000007           0.000023   \n",
-       "3                             0.000025           0.000000   \n",
-       "4                             0.000000           0.000025   \n",
+       "0                             0.000008       3.055698e-06   \n",
+       "1                             0.000017       7.189876e-07   \n",
+       "2                             0.000007       2.336710e-06   \n",
+       "3                             0.000025       0.000000e+00   \n",
+       "4                             0.000000       2.516457e-06   \n",
        "\n",
        "   other_race_share_state  hispanic_latino_share_state  \n",
-       "0                0.000058                     0.000008  \n",
+       "0                0.000004                     0.000008  \n",
        "1                0.000019                     0.000004  \n",
        "2                0.000015                     0.000013  \n",
        "3                0.000008                     0.000007  \n",
        "4                0.000003                     0.000002  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,23 +384,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Merge data and race_shares using census tract\n",
-    "data = data.merge(race_shares, on=\"tract\", how=\"left\")\n",
+    "data = data.merge(shares_pop, on=[\"state\",\"county\",\"tract\"], how=\"left\")\n",
     "\n",
     "# Rename race_shares columns\n",
     "names_race_shares = {\n",
-    "    \"white_share_state\": \"Share of white population\",\n",
-    "    \"black_share_state\": \"Share of black population\",\n",
-    "    \"am_indian_alaska_native_share_state\": \"Share of American Indian or Alaska Native population\",\n",
-    "    \"asian_share_state\": \"Share of Asian population\",\n",
-    "    \"other_race_share_state\": \"Share of Other Race population\",\n",
-    "    \"hispanic_latino_share_state\": \"Share of Hispanic or Latino population\",\n",
+    "    'Share of White Population': \"Share of White population\",\n",
+    "    'Share of Black Population': \"Share of Black population\",\n",
+    "    'Share of American Indian and Alaska Native Population': \"Share of American Indian or Alaska Native population\",\n",
+    "    'Share of Asian Population': \"Share of Asian population\",\n",
+    "    'Share of Other Race Population': \"Share of Other Race population\",\n",
+    "    'Share of Hispanic or Latino Population': \"Share of Hispanic or Latino population\",\n",
     "}\n",
-    "\n",
+    "       \n",
     "share_variables = list(names_race_shares.values())\n",
     "\n",
     "data.rename(columns=names_race_shares, inplace=True)"
@@ -365,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -400,12 +450,12 @@
       "Commute Time                                          0.92        (0.04)\n",
       "Without Health Insurance                              0.01        (0.01)\n",
       "Population Density                                    0.12        (0.17)\n",
-      "Share of white population                             0.00        (0.00)\n",
-      "Share of black population                             0.00        (0.00)\n",
-      "Share of American Indian or Alaska Native popul...    0.00        (0.00)\n",
-      "Share of Asian population                             0.00        (0.00)\n",
-      "Share of Other Race population                        0.00        (0.00)\n",
-      "Share of Hispanic or Latino population                0.00        (0.00)\n"
+      "Share of White population                             0.80        (0.18)\n",
+      "Share of Black population                             0.06        (0.10)\n",
+      "Share of American Indian or Alaska Native popul...    0.01        (0.04)\n",
+      "Share of Asian population                             0.05        (0.07)\n",
+      "Share of Other Race population                        0.03        (0.02)\n",
+      "Share of Hispanic or Latino population                0.05        (0.06)\n"
      ]
     }
    ],
@@ -485,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1276,7 @@
        "Hispanic Latino any                    -0.017066                 NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1404,7 @@
        "Hispanic Latino any                                              NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1555,7 @@
        "Hispanic Latino any                    -0.017066                 NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1736,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1880,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +2047,7 @@
        "Hispanic Latino high rated                                      NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2228,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2372,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2489,7 +2539,7 @@
        "Hispanic Latino total cost                                      NaN  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2507,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2587,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
